--- a/src/AddEntry/AddEntry.css
+++ b/src/AddEntry/AddEntry.css
@@ -18,6 +18,6 @@ textarea,
   padding: 10px 20px;
   margin-left: 20px;
   margin-bottom: 20px;
-  background-color: #0e2b22;
+  background-color: #0D0A36;
   color: white;
 }
