--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App > footer {
-  background-color: #0e2b22;
+  background-color: #0D0A36;
   padding: 20px;
   color: white;
   bottom: 0px;
@@ -7,5 +7,5 @@
 }
 
 .App {
-  background-color: #145742;
+  background-color: #202F66;
 }
