--- a/src/EntryListItem/EntryListItem.css
+++ b/src/EntryListItem/EntryListItem.css
@@ -1,10 +1,10 @@
-.ControlBar__button {
+/* .ControlBar__button {
   border-radius: 20px;
   padding: 10px 20px;
   margin-bottom: 20px;
   background-color: #0e2b22;
   color: white;
-}
+} */
 
 .EntryListItem {
   border: solid 1px #4a5d23;
@@ -13,4 +13,13 @@
   border-radius: 10px;
   background-color: white;
   font-size: 14px;
+}
+
+.DeleteEntry__button {
+  border-radius: 20px;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  background-color: #0D0A36;
+  color: white;
+  font-size: 12px;
 }
