--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -2,7 +2,7 @@
   border-radius: 20px;
   padding: 10px 20px;
   margin-bottom: 20px;
-  background-color: #0e2b22;
+  background-color: #0D0A36;
   color: white;
   font-size: 20px;
 }
